--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 # Copy this file to `.env` and fill the API key. `.env` is ignored by git.
 CFBD_API_KEY=your_api_key_here
+# Redis connection string
+REDIS_ADDR=localhost:6379
