Refactor code structure for improved readability and maintainability

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # Copy this file to `.env` and fill the API key. `.env` is ignored by git.
-CFBD_API_KEY=your_api_key_here
-# Redis connection string
-REDIS_ADDR=localhost:6379
 # HTTP port for the server
 HTTP_PORT=8080
+
+# Base URL for the College Football Data API (optional)
+# Defaults to https://api.collegefootballdata.com
+CFBD_API_BASE=https://api.collegefootballdata.comCFBD_API_KEY=your_api_key_here
+
+# Redis connection string
+REDIS_ADDR=localhost:6379
