fix: correct CFBD_API_BASE line by separating API key declaration

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ HTTP_PORT=8080
 # Base URL for the College Football Data API (optional)
 # Defaults to https://api.collegefootballdata.com
 CFBD_API_BASE=https://api.collegefootballdata.comCFBD_API_KEY=your_api_key_here
+CFBD_API_KEY=your_api_key_here
 
 # Redis connection string
 REDIS_ADDR=localhost:6379
