--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -42,7 +42,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix={{branch}}-
-            type=raw,value=dev-latest,enable={{ref == format('refs/heads/{0}', 'dev')}}
+            type=raw,value=dev-latest,enable={{github.ref == 'refs/heads/dev'}}
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push
