--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -55,3 +55,26 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/cfb:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/cfb:buildcache,mode=max
 
+      - name: Update GitOps repo with new image tag
+        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/dev'
+        run: |
+          git clone https://github.com/amokscience/gitops.git
+          cd gitops
+          
+          # Update values-dev.yaml with new image tag
+          sed -i "s/tag: \"dev-.*/tag: \"dev-${{ github.sha }}\"/" cfb/helm/values-dev.yaml
+          
+          # Check if there are changes
+          if git diff --quiet; then
+            echo "No changes to commit"
+            exit 0
+          fi
+          
+          # Commit and push
+          git config user.email "bot@example.com"
+          git config user.name "GitHub Actions Bot"
+          git add cfb/helm/values-dev.yaml
+          git commit -m "Update dev image tag to dev-${{ github.sha }}"
+          git remote set-url origin https://x-access-token:${{ secrets.GITOPS_TOKEN }}@github.com/amokscience/gitops.git
+          git push origin HEAD:main
+
